--- a/style.css
+++ b/style.css
@@ -5,15 +5,22 @@
     font-family: 'Roboto', sans-serif;
 }
 
-.imgheader{
-  height: 400px;
-  width: 1370px;
+header{
+    background-image: url(img/jumbo.png);
+    background-size: cover;
+    height: 400px;
+    width: 1370px;
+}
+
+.contenitore{
+    max-width: 1370px;
+    margin: auto;
 }
 
 .box1{
     background-color: #255ee9;
     height: 80px;
-    width: 1000px;
+    max-width: 1000px;
     display: inline-flex;
     justify-content: space-between;
     align-items: center;
@@ -27,7 +34,7 @@
     color: white;
 }
 
-.bott1{
+.login{
     border-radius: 20px;
     width: 70px;
     height: 40px;
