--- a/style.css
+++ b/style.css
@@ -40,10 +40,57 @@ header{
     border: none;
 }
 
+.scarica{
+    border-radius: 20px;
+    width: 120px;
+    height: 40px;
+    border: none;
+}
+
+.nero{
+    background-color: black;
+    color: white;
+    border-radius: 20px;
+    width: 200px;
+    height: 40px;
+    border: none;
+}
+
+.scritta{
+    color: white;
+    display: block;
+    padding-left: 400px;
+}
+
 h2{
     font-size: 48px;
 }
 
+.box2{
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    height: 600px;
+}
+
+.box3{
+    background-color: lightgray;
+    display: flex;
+    justify-content: center;
+    height: 600px;
+}
+
+
+.figlio1{
+   height: 300px;
+   margin: 50px 0px;
+}
+
+.figlio2{
+    height: 300px;
+    width: 250px;
+    margin: 50px 0px;
+}
 
 
 
